--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 
     <h1>Esse projeto destacará os comandos essenciais mais usados no GIT</h1>
     
+
+    <ul>
+        <li>git commit -m: Comando para adicionar uma mensagem de commit</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
 </body>
 </html>
