--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <ul>
         <li>git commit -m: Comando para adicionar uma mensagem de commit</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>git add: Comando para adicionar arquivos ao stage</li>
+        <li>git push: Comando para enviar as alterações para o repositório remoto</li>
+        <li>git pull: Comando para baixar as alterações do repositório remoto</li>
+        <li>git branch: Comando para criar uma nova branch</li>
     </ul>
 
 </body>
