--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li>git push: Comando para enviar as alterações para o repositório remoto</li>
         <li>git pull: Comando para baixar as alterações do repositório remoto</li>
         <li>git branch: Comando para criar uma nova branch</li>
+        <li>git checkout: Comando para mudar de branch</li>
     </ul>
 
 </body>
