criando secao: sobre nos

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <li>git checkout: Comando para mudar de branch</li>
     </ul>
 
+    <sectio class="about-us">
+        <h2>Quem somos?</h2>
+        <p> Somos um grupo de desenvolvedores apaixonados por tecnologia e interação</p>
+        <p>Sempre visamos pelo melhor para nossos clientes</p>
+    </sectio>
+
 </body>
 </html>
