criando pagina de produtos

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         <li>git checkout: Comando para mudar de branch</li>
     </ul>
 
+    <a href="./produtos.html">Visite nossa loja</a>
+
 </body>
 </html>
