adicionando texto na secao

--- a/produtos.html
+++ b/produtos.html
@@ -12,5 +12,10 @@
     <h2>Moda masculina</h2>
     <p>Construa seu visual de forma precisa e versátil</p>
 
+
+    <h2>Aprenda a usar nossos produtos</h2>
+    <p>Construa seu visual de forma precisa e versátil</p>
+    <p>São fáceis de serem usados</p>
+
 </body>
 </html>
