--- a/produtos.html
+++ b/produtos.html
@@ -12,5 +12,8 @@
     <h2>Moda masculina</h2>
     <p>Construa seu visual de forma precisa e versátil</p>
 
+    <img src="#" alt="">
+    <p>Nosso melhor pra você</p>
+
 </body>
 </html>
