--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+    <a href="./login.html">Faça o login na sua conta</a>
+
     <h1>Esse projeto destacará os comandos essenciais mais usados no GIT</h1>
     
 
