--- a/contato.html
+++ b/contato.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-color: #222;
+            color: white;
+        }
+    </style>
     <title>Contato</title>
 </head>
 <body>
