adicionando outro texto

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="./login.html">Faça o login na sua conta</a>
 
     <h1>Esse projeto destacará os comandos essenciais mais usados no GIT</h1>
+    <hr>
+    <p>Saber git é essencial para poder contirbuir para projetos em equipe</p>
     
 
     <ul>
