criar botao de compra

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </ul>
 
     <a href="./produtos.html">Visite nossa loja</a>
+
+    <button>Comprar agora!</button>
+
     <sectio class="about-us">
         <h2>Quem somos?</h2>
         <p> Somos um grupo de desenvolvedores apaixonados por tecnologia e interação</p>
